--- a/src/components/ContactsList/Contacts.module.css
+++ b/src/components/ContactsList/Contacts.module.css
@@ -1,34 +1,32 @@
 .item {
-    display: flex;
-    align-items: center
+  display: flex;
+  align-items: center;
 }
 
 .wrap {
-        width: 300px;
-        padding-top: 20px;
-            margin: 5px;
-            display: flex;
-            flex-direction: column;
+  width: 100%;
+  padding-top: 20px;
+  margin: 5px;
+  display: flex;
+  flex-direction: column;
 }
 
 .title {
-    margin: 5px;
+  margin: 5px;
 }
 
 .discription {
-    margin: 5px;
+  margin: 5px;
 }
 
 .list {
-    margin: 0px;
-    padding: 0px;
-
+list-style: none;
+  margin: 0px;
+  padding: 0px;
+  font-size: 20px;
 }
 
 .button {
-    font-size: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 3px 2px;
-    width: 50px;
+  margin-left: auto;
+  font-size: 16px;
 }
