--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,18 +1,23 @@
 .form {
-    width: 300px;
-    margin: 5px;
     display: flex;
     flex-direction: column;
+    font-size: 20px;
+    width: 100%;
 }
 
 .button {
+    font-size: 18px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 5px;
-    padding: 5px 2px;
-    width: 80px;
+    padding: 5px;
 }
 
 .title {
     margin: 5px;
+}
+
+input {
+    font-size: 24px;
+    outline: none;
 }
