--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
+  background: linear-gradient(to bottom,#d2ced5, #5b2f6ab5);
+  height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -18,6 +20,9 @@ h1,
 h2,
 h3,
 p {
+  margin: 0px;
   margin-left: 10px;
   padding: 0;
 }
+
+
